# sshpoker

./: .gitignore  all_fonts.py  pyproject.toml  server.py
sshpoker/: const.py  db.py  types.py
sshpoker/schema/: 0000.sql
sshpoker/screens/: changeusername.py  getstats.py  getwallet.py  mainmenu.py  quit.py
